# MOHANPHISHER

./: MOHAHPHISHER.py  MOHANPHISHER.py  Mohanphisher.py  README.md
    .github/workflows/: docker.yml
files/: Dockerfile  pyproject.toml
