[build-system]
requires = [
    "setuptools>=58.0.4",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "MOHANPHISHER"
version = "1.2.2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/MMohanraj20/MOHANPHISHER/"
include = ["README.md", "LICENSE", "files/email.json"]
description = "A python phishing script for login phishing, image phishing, video phishing and many more"
authors = ["M.MOHANRAJ <MOHANRAJMOHANRAJ43221@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.3.0"
beautifulsoup4 = "^4.12"
rich = "^13.0.0"

[tool.poetry.scripts]
MOHANPHISHER = "MOHANPHISHER:main"

[build-system.sdist]
formats = ["gztar"]

[build-system.bdist_wheel]
universal = false
